--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,14 @@
 .container {
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(135deg, #153677, #8f0505);
+    background: linear-gradient(135deg, #161617, #ff5b03);
     padding: 10px;
 }
 
 .todo-app {
     width: 100%;
     max-width: 540px;
-    background: #130101;
+    background: #0800fa;
     margin: 100px auto 20px;
     padding: 40px 30px 70px;
     border-radius: 10px;
